syntax = "proto3";

package user;

service User {
  rpc createUser(CreateUserRequest) returns (CreateUserResponse);
  rpc authUser(AuthUserRequest) returns (AuthUserResponse);
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
}
message CreateUserResponse {
  string id = 1;
}

message AuthUserRequest {
  string email = 1;
  string password = 2;
}
message AuthUserResponse {
  string session_token = 1;
}
